--- a/index.html
+++ b/index.html
@@ -1,47 +1,67 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<title>FrosTether | FTC Gateway</title>
-<meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=no,maximum-scale=1,viewport-fit=cover">
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no, viewport-fit=cover">
+<title>⛓️‍💥 RC189 | MINING_DYNAMICS_SHIELD</title>
+<script src="https://cdn.jsdelivr.net/npm/ethers@6.9.0/dist/ethers.umd.min.js"></script>
 <style>
-:root{--bg:#020202;--g:#FFD700;--gd:#B8860b;--c:#0ff;--p:#d500f9;--sb:env(safe-area-inset-bottom,20px)}
-*{margin:0;padding:0;box-sizing:border-box;-webkit-tap-highlight-color:transparent;user-select:none}
-body{background:var(--bg);color:var(--g);font-family:'Courier New',monospace;height:100vh;display:flex;flex-direction:column;align-items:center;padding:15px}
-.h{width:100%;border-bottom:2px solid var(--c);padding-bottom:10px;margin-bottom:20px;display:flex;justify-content:space-between;font-size:.65rem;text-shadow:0 0 5px var(--c)}
-.card{width:100%;background:#0a0a0a;border:1px solid var(--gd);border-radius:12px;padding:15px;margin-bottom:15px}
-.btn-launch{width:100%;background:linear-gradient(180deg,var(--c),#008b8b);color:#000;border:1px solid #fff;padding:15px;border-radius:25px;font-size:.8rem;font-weight:900;text-decoration:none;display:block;text-align:center;text-transform:uppercase}
-#contract-link{font-size:.45rem;color:var(--c);text-decoration:none;display:block;margin-top:10px;text-align:center;opacity:0.7}
+:root { --bg:#000; --ice:oklch(85% 0.15 230); --leet:oklch(90% 0.4 100); --warn:oklch(65% 0.25 40); }
+* { margin:0; padding:0; box-sizing:border-box; font-family:"Courier New", monospace; }
+body { background:var(--bg); color:#fff; height:100dvh; display:flex; flex-direction:column; align-items:center; justify-content:center; overflow:hidden; }
+
+.warning-box {
+  width: 90%; max-width: 400px; background: rgba(20,0,0,0.8); border: 2px solid var(--warn); border-radius: 15px;
+  padding: 20px; text-align: left; box-shadow: 0 0 30px var(--warn / 0.2); margin-bottom: 20px;
+}
+.warning-title { color: var(--warn); font-weight: 900; font-size: 14px; margin-bottom: 10px; display: flex; align-items: center; gap: 8px; }
+.warning-text { font-size: 8px; line-height: 1.4; color: #ffcccc; margin-bottom: 15px; }
+.rule-item { margin-bottom: 6px; border-left: 2px solid var(--warn); padding-left: 8px; }
+
+.ignite-container { width: 90%; max-width: 400px; text-align: center; }
+.start-btn { 
+  width: 100%; padding: 22px; border: 4px solid var(--leet); color: var(--leet); font-weight: 900; 
+  border-radius: 50px; background: transparent; letter-spacing: 6px; cursor: pointer; transition: 0.2s;
+}
+.start-btn:active { transform: scale(0.95); background: var(--leet); color: #000; }
+.disabled { opacity: 0.3; cursor: not-allowed; }
 </style>
 </head>
 <body>
-<div class="h">
-    <div>⛓️ FrostChain | voluntaryistj.base.eth</div>
-    <div style="color:var(--c)">FTC PV: <span id="shield-status">ACTIVE</span></div>
+
+<div class="warning-box" id="warning-node">
+  <div class="warning-title">⚠️ MINING_DYNAMICS_WARNING</div>
+  <div class="warning-text">
+    <div class="rule-item"><strong>ELECTRICAL_LOAD:</strong> High-velocity x-Infinity extraction consumes significant device power and thermal headroom.</div>
+    <div class="rule-item"><strong>THE_BURN:</strong> 10% net yield is recaptured as Heart Burn ❤️‍🔥 to maintain 80M Hard Cap.</div>
+    <div class="rule-item"><strong>SETTLEMENT:</strong> Yield partitions via Weighted 125 Scale to established Frostchain endpoints.</div>
+  </div>
+  <label style="font-size: 9px; display: flex; align-items: center; gap: 10px; color: var(--ice);">
+    <input type="checkbox" id="consent" onchange="toggleIgnition()"> I ACCEPT THE SOVEREIGN RULES
+  </label>
 </div>
 
-<div class="card">
-<div style="font-size:1.4rem;font-weight:900;text-align:center;margin:10px 0;color:#fff" id="clock">00:00:00</div>
-<div style="display:grid;grid-template-columns:1fr 1fr;gap:10px;text-align:center">
-    <div><span style="font-size:.4rem;color:var(--gd)">FTC BALANCE</span><span style="font-size:.9rem;display:block" id="bal">0.00</span></div>
-    <div><span style="font-size:.4rem;color:var(--gd)">DPR BURN</span><span style="font-size:.9rem;display:block" id="dpr">0</span></div>
-</div>
-<a id="contract-link" href="https://basescan.org/token/0xee132a0fa1f0724d3ec3936f0cdc5213af748c42" target="_blank">FTC: 0xEE13...8C42 ↗</a>
-</div>
-
-<div class="card">
-    <button onclick="ignite('blocks.html')" class="btn-launch">FROST CRUSH (KotH)</button>
-    <button onclick="ignite('GraysonsWallet.html')" class="btn-launch" style="background:var(--p);color:#fff;margin-top:10px">GRAYSON'S VAULT</button>
+<div class="ignite-container">
+  <button class="start-btn disabled" id="ignite-trigger" disabled onclick="startMining()">IGNITE EXTRACTION</button>
 </div>
 
 <script>
-function ignite(url) { localStorage.setItem('autoMine', 'true'); setTimeout(() => { window.location.href = url; }, 150); }
-function uU(){
-    const n = new Date(); const est = new Date(n.getTime() + (n.getTimezoneOffset() * 6e4) + (-5 * 36e5));
-    document.getElementById('clock').innerText = est.toLocaleTimeString('en-US', {hour12: false});
-    document.getElementById('bal').innerText = (Number(localStorage.getItem('hr'))||0).toFixed(2);
-    document.getElementById('dpr').innerText = localStorage.getItem('burnCount')||0;
+function toggleIgnition() {
+  const checkbox = document.getElementById('consent');
+  const btn = document.getElementById('ignite-trigger');
+  if(checkbox.checked) {
+    btn.classList.remove('disabled');
+    btn.disabled = false;
+  } else {
+    btn.classList.add('disabled');
+    btn.disabled = true;
+  }
 }
-setInterval(uU, 1000); uU();
+
+function startMining() {
+  if(navigator.vibrate) navigator.vibrate([100, 50, 200]);
+  window.location.href = 'games/blocks.html';
+}
 </script>
 </body>
 </html>
